# lab03

./: CMakeLists.txt  README.md  plot.py
include/: rsq.hpp
include/rmq/: rmq1d_precalc.hpp  segment_tree.hpp  sparse_table.hpp  sqrt_decomposition.hpp
include/rsq/: fenwick_tree.hpp  rsq1d.hpp  rsq2d.hpp
src/: fenwick_tree.cpp  main.cpp  rmq1d_precalc.cpp  rsq.cpp  rsq1d.cpp  rsq2d.cpp  segment_tree.cpp  sparse_table.cpp
